# dynanets

./: .gitignore  README.md  pyproject.toml  tmp_patch_plot_readability_1.py
benchmarks/: track_a_cnn_phase6_preview.yaml  track_a_cnn_wave1_preview.yaml  track_a_efficient_static_preview.yaml  track_a_synthetic_official_v1.yaml  track_a_synthetic_seed.yaml  track_a_wave1_preview.yaml  track_b_mnist_layermerge_preview.yaml  track_b_mnist_official_v1.yaml  track_b_mnist_phase6_preview.yaml  track_b_mnist_phase7_preview.yaml  track_b_mnist_wave1_preview.yaml  track_c_cifar_full_preview.yaml  track_c_cifar_official_extended.yaml  track_c_cifar_routing_focus_round2.yaml  track_c_cifar_static_preview.yaml  track_d_routing_efficiency_cifar100_preview.yaml
docs/: adding-methods.md  benchmark-roadmap.md  first-paper-batch.md  implemented_methods_suite.yaml  official_benchmark_suite.yaml
experiments/: README.md
reports/: INDEX.md
tests/: test_adanet_workflow.py  test_architecture_spec.py  test_baseline_pipeline.py  test_benchmark_suite.py  test_benchmark_summary.py  test_challenging_datasets.py  test_channel_pruning_adaptation.py  test_cnn_phase5.py  test_cnn_pruning_phase6.py  test_config_validation.py  test_constraints.py  test_efficient_cnn_models.py  test_execution_pipeline.py  test_experiment_hardening.py  test_layermerge_workflow.py  test_metrics.py  test_network_slimming_workflow.py  test_paper_batch_methods.py  test_phase6_training_and_methods.py  test_protocol.py  test_registry.py  test_routing_phase7.py  test_search_pipeline.py  test_sparsity_primitives.py  (+1 more)
(+524 files in other folders)
