[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dynanets"
version = "0.1.0"
description = "Sandbox for NAS and dynamic-structure neural network experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]